--- a/web/templates/templates.html
+++ b/web/templates/templates.html
@@ -13,8 +13,21 @@
   </div>
 </div>
 
-<div id="templates-grid" class="card-grid">
-  <div class="loading">로딩 중...</div>
+<div class="table-container">
+  <table class="data-table">
+    <thead>
+      <tr>
+        <th>이름</th>
+        <th>시트 수</th>
+        <th>설명</th>
+        <th>수정일</th>
+        <th>작업</th>
+      </tr>
+    </thead>
+    <tbody id="templates-tbody">
+      <tr><td colspan="5" class="loading">로딩 중...</td></tr>
+    </tbody>
+  </table>
 </div>
 
 <template id="tmpl-form-tpl">
